оптимизация импорта и коллекций